Rahul | Fixed CSS overflows for global scroll

--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -1,5 +1,4 @@
 form {
-    border: 5px solid black;
     width: 100%;
     font-size: 18px
 }
